Switch to two-column layout

--- a/index.html
+++ b/index.html
@@ -23,14 +23,22 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-12" id="animation-container">
-          <img src="shark.png" id="shark-icon" />  
-        </div>
-      </div>
+        <div class="col-8">
 
-      <div class="row">
-        <div class="col-12" id="list-container">
-          <ul id="movie-list"></ul>
+          <div id="animation-container">
+            <img src="shark.png" id="shark-icon" />
+          </div>  
+
+          <div id="list-container">
+            <ul id="movie-list"></ul>
+          </div>
+
+        </div>
+
+        <div class="col-4">
+          <h3>Next Fan Club Mtg</h3>
+          <p>6:30pm, Nov 17</p>
+          <p>@ the Downtown Denny's</p>
         </div>
       </div>
     </div>
