--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 
     <title>The Jaws Site</title>
   </head>
@@ -17,17 +18,14 @@
     </nav>
 
     <div class="jumbotron">
+      <div id="animation-container">
+        <img src="shark.png" id="shark-icon" />  
+      </div>
       <h1 class="display-4">Everything JAWS</h1>
       <p class="lead">This is the site for everything JAWS</p>
     </div>
 
     <div class="container">
-      <div class="row">
-        <div class="col-12" id="animation-container">
-          <img src="shark.png" id="shark-icon" />  
-        </div>
-      </div>
-
       <div class="row">
         <div class="col-12" id="list-container">
           <ul id="movie-list"></ul>
